[project]
name = "wildberries-parser"
version = "0.1.0"
description = ""
authors = [
    {name = "Galaxy Voyager",email = "leheln16@gmail.com"}
]
requires-python = ">=3.11"
dependencies = [
    "requests (>=2.33.0,<3.0.0)",
    "pandas (>=3.0.1,<4.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "selenium (>=4.41.0,<5.0.0)",
    "webdriver-manager (>=4.0.2,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
